WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
87136
REGRESSION(117918) - 4 webgl/tex-iomage-and-sub-image-2d-with-image tests failing on Mac bots.
https://bugs.webkit.org/show_bug.cgi?id=87136
Summary
REGRESSION(117918) - 4 webgl/tex-iomage-and-sub-image-2d-with-image tests fai...
Brady Eidson
Reported
2012-05-22 09:02:31 PDT
REGRESSION(117918) - 4 webgl/tex-iomage-and-sub-image-2d-with-image tests failing on Mac bots. fast/canvas/webgl/tex-image-and-sub-image-2d-with-image-rgb565.html fast/canvas/webgl/tex-image-and-sub-image-2d-with-image-rgba4444.html fast/canvas/webgl/tex-image-and-sub-image-2d-with-image-rgba5551.html fast/canvas/webgl/tex-image-and-sub-image-2d-with-image.html Due to
http://trac.webkit.org/changeset/117918
Example of failures:
http://build.webkit.org/results/Lion%20Release%20(Tests)/r117918%20(8526)/results.html
Attachments
Patch
(5.04 KB, patch)
2012-05-22 19:43 PDT
,
Kenneth Russell
no flags
Details
Formatted Diff
Diff
Rebaselined patch
(5.13 KB, patch)
2012-05-23 11:02 PDT
,
Kenneth Russell
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Brady Eidson
Comment 1
2012-05-22 09:10:21 PDT
Skipped in
http://trac.webkit.org/changeset/117982
Please unskip after you fix the regression.
Kenneth Russell
Comment 2
2012-05-22 09:26:00 PDT
Thanks for filing this and sorry about the regression. I suspect that the error is related to the setup of the WebGL context's back buffer rather than anything specifically related to this test. Possibly related to
Bug 81284
. Will investigate.
Kenneth Russell
Comment 3
2012-05-22 19:43:13 PDT
Created
attachment 143438
[details]
Patch
Kenneth Russell
Comment 4
2012-05-22 19:45:17 PDT
This also fixes
Bug 75507
.
Kenneth Russell
Comment 5
2012-05-23 11:02:28 PDT
Created
attachment 143597
[details]
Rebaselined patch
Stephen White
Comment 6
2012-05-23 11:06:05 PDT
Comment on
attachment 143597
[details]
Rebaselined patch Looks good, as long as the bots like it. r=me
WebKit Review Bot
Comment 7
2012-05-23 12:21:20 PDT
Comment on
attachment 143597
[details]
Rebaselined patch Clearing flags on attachment: 143597 Committed
r118225
: <
http://trac.webkit.org/changeset/118225
>
WebKit Review Bot
Comment 8
2012-05-23 12:21:25 PDT
All reviewed patches have been landed. Closing bug.
Kenneth Russell
Comment 9
2012-05-23 13:20:39 PDT
***
Bug 75507
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug